--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -1,23 +1,11 @@
 name: Test proyecto
 on: [push, workflow_dispatch]
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - name: coge mi codigo del repositorio
-        uses: actions/checkout@v3
-      - name: instalar nodejs
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
-      - name: instalar dependencias
-        run: npm ci
-      - name: ejecutar los test
-        run: npm test
   deploy:
-    needs: test
     runs-on: ubuntu-latest
     steps:
+      - name Output event data
+        run: echo "${{ toJSON(github.event) }}"
       - name: Get the code from the repository
         uses: actions/checkout@v3
       - name: Install NodeJS
