--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -1,5 +1,14 @@
-name: Test proyecto
-on: [push, workflow_dispatch]
+name: Events Demo 1
+on: 
+  pull_request:
+    types:
+      - opened
+  workflow_dispatch:
+  push:
+    branches:
+      - "main"
+    paths-ignore:
+      -"github/workflows/*"
 jobs:
   deploy:
     runs-on: ubuntu-latest
